--- a/todo_backend/src/package.json
+++ b/todo_backend/src/package.json
@@ -5,5 +5,9 @@
     "express": "^4.21.2",
     "nodemon": "^3.1.9",
     "pg": "^8.13.1"
+  },
+  "devDependencies": {
+    "@prisma/client": "^6.2.1",
+    "prisma": "^6.2.1"
   }
 }
