--- a/todo_backend/src/package.json
+++ b/todo_backend/src/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "nodemon": "^3.1.9",
     "pg": "^8.13.1"
@@ -9,5 +10,8 @@
   "devDependencies": {
     "@prisma/client": "^6.2.1",
     "prisma": "^6.2.1"
+  },
+  "scripts": {
+    "migrate": "dotenv -e /home/liizoe/Desktop/TP-Sitio-Web---Intro.-Des.-Software/.env -- npx prisma migrate dev --name"
   }
 }
