added instructions of prisma migration in README.md & added a script section in package.json

--- a/todo_backend/src/package.json
+++ b/todo_backend/src/package.json
@@ -12,6 +12,6 @@
     "prisma": "^6.2.1"
   },
   "scripts": {
-    "migrate": "dotenv -e /home/liizoe/Desktop/TP-Sitio-Web---Intro.-Des.-Software/.env -- npx prisma migrate dev --name"
+    "migrate": "dotenv -e ./../../.env -- npx prisma migrate dev --name"
   }
 }
