correct minor errors in README.md & update dockerfiles/docker-compose for front-back containers communication

--- a/todo_backend/Dockerfile
+++ b/todo_backend/Dockerfile
@@ -14,7 +14,8 @@ RUN npm install --save-dev prisma @prisma/client
 
 RUN npm i -g nodemon
 
-COPY ./src /app
+# Esto sirve mas que nada para produccion, para desarrollo es mejor usar volumes, declarado en el compose
+# COPY ./src /app
 
 EXPOSE 5000
 
