--- a/todo_frontend/Dockerfile
+++ b/todo_frontend/Dockerfile
@@ -5,7 +5,8 @@ FROM httpd:alpine
 # Es una adventencia generado por Apache cuando no puede determinar el nombre de dominio completo del servidor 
 RUN echo "ServerName localhost" >> /usr/local/apache2/conf/httpd.conf
 
-COPY ./pages /usr/local/apache2/htdocs/
-COPY ./assets /usr/local/apache2/htdocs/assets/
+# Esto sirve para la produccion.
+# COPY ./pages /usr/local/apache2/htdocs/
+# COPY ./assets /usr/local/apache2/htdocs/assets/
 
 EXPOSE 80
