--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,13 +12,19 @@ services:
     build: ./todo_frontend
     ports:
       - "5500:80"
+    volumes:    # Permite mostrar los cambios del front, sin necesidad de reiniciar el container
+      - ./todo_frontend/pages:/usr/local/apache2/htdocs    
+      - ./todo_frontend/assets:/usr/local/apache2/htdocs/assets
 
   backend:
     build:
       context: ./todo_backend
     ports:
-      - "5000:5000"     # mappea 5000 del pc al conteiner
+      - "5000:5000"   # mappea 5000 del pc al conteiner
     depends_on:
       - postgres
+      - frontend
     env_file:
       - ./.env
+    volumes:    # Mapea los cambios, lo mismo que volumes-frontend
+      - ./todo_backend/src:/app
