cambio el latets por la version 14

--- a/todo_backend/Dockerfile
+++ b/todo_backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:latest
+FROM node:14
 
 # Limpia el cache npm para por posibles problemas de dependencias corruptas
 RUN npm cache clean --force
