--- a/todo_backend/Dockerfile
+++ b/todo_backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:14
+FROM node:latest
 
 # Limpia el cache npm para por posibles problemas de dependencias corruptas
 RUN npm cache clean --force
